Travis CI build fail resolved
undo change in README to resolve  warning by expertiza_bot

started 1124 changes

continuing 1102 changes-1

continuing 1102 changes-2

finished 1102 changes. testing

added 1124 changes. tested

trial onfocus onblur

removed d3 files as they are included in bower.json

fixes for onfocus/onblur detection

review time tracking and iframe focus fixes

update end time for tabs when expertiza on focus

Disabled link copy/paste and right click.

Fixes for disabling right click and selection on non-iFrame

close open links on unload

Autosave button unchecked by default

Stop user from opening two of the same links.

refactored-update end time for tabs when expertiza on focus

display pie chart in popup

display total time in Team Reviewed column as hyperlink to show time details(same as Reviewer)

Added RSpec Tests for submission_viewing_controller_spec.rb

click on total time to display empty popup

display piechart on clicking total time

need to work on summing the time

display piechart fixed

fixed extra comma being displayed

removed unnvessary things, fixed no method error while saving end_time, fixed multiple displays of total time

the piechart is empty for the first review, need to tested in different machine.

TEST: Precise link time algorithm

Include function arguments

accurately calculate expertiza time and total link time and fixed recording end times for links

UI Changes to app/views/popup/reviewer_details_popup.html.erb

Fixes for iframe tracking and expertiza review time tracking

display piechart when clicked on time

display expertiza and links time in table inside popup

display total object time in popup

display table in center

Updated RSpec Test Cases for submission_viewing_events_controller_spec.rb

Fixed problem dealing with response lookup.

fixed total object time issue

Added comments to previous commits.

removed unnecessary parts of code to make it similar to beta

delete console.log and undo some code as it

--- a/app/views/submitted_content/_hyperlink.html.erb
+++ b/app/views/submitted_content/_hyperlink.html.erb
@@ -14,6 +14,8 @@
   <% end %>
   
   <a href="#" id="urlLink" name="urlLink" onClick="toggleElement('url','links');return false;">hide links</a><br/>
+
+  <!-- Setting user-select to none prevents users from copy-pasting url links -->
   <div id="url" style="user-select: none">
     <p><b>Note:</b> You can only open one of each link at a time.</p>
     <ul>
