--- a/app/views/popup/reviewer_details_popup.html.erb
+++ b/app/views/popup/reviewer_details_popup.html.erb
@@ -6,7 +6,7 @@
     <tr>
       <th align = "right" width="15%"> Full name:</th>
       <td width="35%"> <%= @user.fullname(session[:ip]) %></td>
-      <!--<td rowspan=4 width="50%" align="center"><= image_tag "blank_profile_pic.jpg", :width=>"100px", :height=>"100px", :border=>1></td>-->
+      <td rowspan=4 width="50%" align="center"><%= image_tag "blank_profile_pic.jpg", :width=>"100px", :height=>"100px", :border=>1%></td>
     </tr>
     <tr>
       <th align = "right"> User id:</th>
@@ -188,3 +188,4 @@
   }
 </script>
 </div> 
+
