--- a/app/views/reports/_review_report.html.erb
+++ b/app/views/reports/_review_report.html.erb
@@ -49,7 +49,7 @@
     </tr>
     </thead>
     <tbody>
-
+    <% timeHash = Hash.new %>
     <% sort_reviewer_by_review_volume_desc.each do |r| %>
       <% @response_maps, @rspan = get_data_for_review_report(@id, r.id, @type) %>
       <tr>
@@ -97,8 +97,9 @@
                     <!--later we can create a hyperlink question type to deal with this situation.-->
                     <%= list_hyperlink_submission(ri.id, 5386) if Assignment.find_by(id: @id.to_i).try(:course).try(:instructor).try(:name) == 'Jkidd' %>
                   </div>
-                  <%= render partial: 'review_submissions_time_spent',  locals: {bgcolor: @bgcolor, map_id: ri.id,id: r.id} %>
 
+                  <!--Display total time spent on reviewing as a hyperlink to popup which shows the breakdown of time spent between expertiza and other links as piechart-->
+                  <%= render partial: 'review_submissions_time_spent',  locals: {bgcolor: @bgcolor, map_id: ri.id,id: r.id, reviewee_id: ri.reviewee_id, timeHash: timeHash} %>    
                 <!--Author feedback-->
                 <!--Dr.Kidd required to add a "author feedback" column that shows the average score the reviewers received from the authors. In this case, she can see all the data on a single screen.-->
                 <!--Dr.Kidd's course-->
