--- a/app/views/popup/reviewer_details_popup.html.erb
+++ b/app/views/popup/reviewer_details_popup.html.erb
@@ -6,17 +6,17 @@
     <tr>
       <th align = "right" width="15%"> Full name:</th>
       <td width="35%"> <%= @user.fullname(session[:ip]) %></td>
-      <td rowspan=4 width="50%" align="center"><%= image_tag "blank_profile_pic.jpg", :width=>"100px", :height=>"100px", :border=>1%></td>
+      <!--<td rowspan=4 width="50%" align="center"><= image_tag "blank_profile_pic.jpg", :width=>"100px", :height=>"100px", :border=>1></td>-->
     </tr>
     <tr>
       <th align = "right"> User id:</th>
       <td> <%= @user.name(session[:ip]) %></td>
     </tr>
-    <tr>
+  <!--    <tr>
       <th align = "right"> email:</th>
       <td> <%= @user.email(session[:ip]) %></td>
     </tr>
-    <tr>
+    <tr>-->
       <th align = "right"> Handle:</th>
       <td> <%= @user.handle %></td>
     </tr>
@@ -24,4 +24,158 @@
 
   </table>
 
+</div>
+
+<% def get_link_round_review_time(map_id, round, link) %>
+    <% sum_time = 0 %>
+    <% links = ResponseTime.where(map_id: map_id, round: round, link: link) %>
+    <% links.each do |link_time| %>
+        <% if link_time.end_at.nil? || link_time.start_at.nil? %>
+            <% individual_time = 0 %>
+        <% else %>
+            <% individual_time = (link_time.end_at.to_i - link_time.start_at.to_i)/60.0 %>
+        <% end %>
+        <% individual_time = individual_time<0? 0: individual_time %>
+        <% sum_time = individual_time + sum_time %>
+    <% end %>
+    <% sum_time %>
+<% end %>
+
+<div id="responsetime">
+  <% reviewee_list = Array.new %>
+  <% total_time_list = Array.new %>
+  <% timeHash = Hash.new %>
+  <h3> Response time details</h3>
+  <a id = "details" class= "show" onclick="showDetails()">show details</a>
+  <div id="chartContainer" style="height: 300px; width: 100%; display: none; "></div>
+  <div>
+    <table width="100%">
+      <tr>
+        <th align="right">Reviewee id </th>
+        <th align="right">Total Time (mins)</th>  
+        <th align="right">Round </th>
+        <th align="right">Links</th>
+        <th align="right">Time per link (mins)</th>
+        <th></th>
+      </tr>
+    <% @reviewers = Participant.where(user_id: @user.id) %>
+    <% @reviewers.each do |reviewer| %> <!-- for reviewer-->
+      <% @response_maps = ResponseMap.where(reviewer_id: reviewer.id, reviewed_object_id: @id)  %>
+      <% @number_of_rounds = Assignment.find(@id).rounds_of_reviews %>
+      <% reviewee_count = 0 %>
+      <% @response_maps.each do |map| %>  <!-- for reviewee-->
+        <% map_total_time = 0 %>
+        <% (1..@number_of_rounds).each do |each_round| %>  <!-- for rounds-->
+          <% @per_round_time = Array.new %>
+          <% @responsetime_match = ResponseTime.where(map_id: map.id, round:each_round)%>
+          <% @reviewed_object_id = map.reviewed_object_id %>
+          <% @reviewee_id = map.reviewee_id %>
+          <% link_list = Array.new %>
+          <% @count = 0 %>   <!--- To print revieweeId only once-->
+          <% @dummy = "      " %>    <!---Empty string as a placeholder-->
+          <% @responsetime_match.each do |responsetime_entry| %>
+            <% if link_list.include?(responsetime_entry.link) %><!-- only unique links per round-->
+            <% else %>
+                <% link_list.push(responsetime_entry.link) %>
+                <tr>
+                <% if @count == 0 %>  <!--- print revieweeId,time, round only for the first row-->
+                  <td><%= @reviewee_id %></td>
+                  <td id="<%= reviewee_count.to_s %>"></td>
+                  <td><%= responsetime_entry.round %></td>
+                <% else %>        <!--- Else print dummy-->
+                  <td><%= @dummy %></td>  
+                  <td><%= @dummy %></td>
+                  <td><%= " "%></td>
+                <%end%>
+                <td><%= responsetime_entry.link %></td>
+                <% individual_link_time = get_link_round_review_time(responsetime_entry.map_id,responsetime_entry.round,responsetime_entry.link) %>
+                <% map_total_time = map_total_time + individual_link_time %>
+                 <% each_link_detail = Array.new %>
+                 <% each_link_detail << responsetime_entry.link %>
+                 <% each_link_detail << individual_link_time %>
+                 <% @per_round_time << each_link_detail %>
+                <td align="center"><%= sprintf("%.2f",individual_link_time) %></td>
+                <% if @count == 0 %>
+                <td><a onclick="drawChart(<%= @reviewee_id.to_s %>,<%= each_round.to_s %>)">Pie Chart </a></td>
+                <% else %> 
+                <td><%= " "%></td>
+                <%end%>
+                </tr>
+            <% end %>
+            <% @count=@count+1 %>
+          <%end %>   <!-- end for link-->
+        <% timeHash[(@reviewee_id.to_s).concat(each_round.to_s)] = @per_round_time %>  
+        <% end%>    <!-- end for round-->
+        <% reviewee_list << @reviewee_id %>
+        <% total_time_list << map_total_time.round(2) %>
+        <% reviewee_count = reviewee_count+1%>
+      <% end %>  <!-- end for reviewee-->
+    <% end %>   <!-- end for reviewer-->
+  </table>
+</div>
+<!--- Script to update the total time column after the page load-->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"> </script>     <!-- Canvas JS CDN -->
+<script type="text/javascript">
+  var timeReportHash;
+  var showDetailsEnabled = false;
+  $(document).ready(function () { 
+    timeReportHash = <%= timeHash.to_json.to_s.html_safe %>;
+    totalTimeList = <%= total_time_list%>
+    for(each=0;each<totalTimeList.length;each++){
+      // var eachId = each.toString();  
+      // document.getElementById(eachId).innerHTML = totalTimeList[each];  
+      $("#responsetime table #"+each).html(totalTimeList[each]);
+    }       
+  });  
+  function showDetails(){
+    if(showDetailsEnabled){
+      $( "#chartContainer" ).toggle();
+        if($("#details").text()=="show details"){
+          $("#details").text('hide details');  
+        } else {
+          $("#details").text('show details');
+        }
+    } 
+  }
+  function drawChart(reviewee_id,round){
+    showDetailsEnabled=true;   //To enable the show details link
+    if($("#chartContainer").css("display")== 'none'){
+        $( "#chartContainer" ).toggle();
+        $("#details").text('hide details'); 
+    }
+      var allLinks = timeReportHash[(reviewee_id.toString()).concat(round.toString())];
+      var dataArray=[];  // Data to be passed to chart
+      var sum_time = 0.0;
+      // for (i=0; i<allLinks.length; i++)
+      //   sum_time += allLinks[i][1]+0.00001;
+      for(i=0;i<allLinks.length;i++){
+        var dataPoint={}
+        // dataPoint["y"] = allLinks[i][1];
+        dataPoint["y"] = allLinks[i][1];
+        var link_name = allLinks[i][0];
+        dataPoint["label"] = link_name.slice(0,50)+(link_name.length>30? "...":"");
+        dataArray.push(dataPoint);
+      }
+    
+    var chart = new CanvasJS.Chart("chartContainer",
+    { 
+      data: [
+      {
+        type: "doughnut",
+        startAngle: 60,
+        //showInLegend: false,
+        innerRadius: 60,
+        legendText: "{label}",
+        yValueFormatString: "##.##",
+        toolTipContent: "<b>{label}:</b>  {y}min (#percent%)",
+        indexLabelFontSize: 17,
+        indexLabel: "{label} - #percent%",
+        dataPoints : dataArray
+      }
+      ]
+    });
+    chart.render();
+    $(".canvasjs-chart-credit").css("display","none");//To remove the water mark from the chart
+  }
+</script>
 </div>
