--- a/app/views/popup/view_review_scores_popup.html.erb
+++ b/app/views/popup/view_review_scores_popup.html.erb
@@ -40,20 +40,29 @@
                   <tr>
                     <% responses.each do |response_id| %>
                       <% answer = Answer.where(response_id: response_id, question_id: question.id).first %>
-                      <td align='center'>
-                        <p><%= answer.answer == 0 ? image_tag("delete_icon.png") : image_tag("Check-icon.png") %></p></td>
-                    <% end %>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-          <% else %>
-            <!-- Only assign these column headers if the question isn't a checkbox question -->
-            <tr>
-              <td width="20%"> Reviewee</td>
-              <td width="10%"> Score</td>
-              <td width="70%"> Comments</td>
-            </tr>
+                      <% if !answer.nil? %>
+                          <tr>
+                            <% index = ResponseMap.find(Response.find(response_id).map_id).reviewee_id %>
+                            <% team = Team.find(index)%>
+                            <% response_map = ReviewResponseMap.where(reviewed_object_id: @assignment_id,
+                                                                      reviewer_id: @reviewer_id,
+                                                                      reviewee_id: team.id).last %>
+                            <% response_update_at = response_map.try(:response).try(:last).try(:updated_at) %>
+                            <% review_graded_at = ReviewGrade.find_by(participant_id: @reviewer_id).try(:review_graded_at) %>
+                            <% col_color = 'black' %>
+                            <% col_color = 'blue' if review_graded_at && response_update_at && response_update_at > review_graded_at %>
+                            <!--Reviewee-->
+                            <td>
+                              <p style="color: <%= col_color %>"><%= team.name %> <br>
+                            </td>
+                            <!--Score-->
+                            <% if question.instance_of? Checkbox %>
+                                <td align='center'>
+                                  <p style="color: <%= col_color %>"><%= answer.answer == 0 ? image_tag("delete_icon.png") : image_tag("Check-icon.png") %></p>
+                                </td>
+                            <% else %>
+                                <td align='center'><p style="color: <%= col_color %>"><%= answer.answer %></p></td>
+                            <% end %>
 
             <% responses.each do |response_id| %>
               <% answer = Answer.where(response_id: response_id, question_id: question.id).first %>
