--- a/app/views/response/view.html.erb
+++ b/app/views/response/view.html.erb
@@ -6,8 +6,8 @@
 
 <% if !(@map.instance_of? TeammateReviewResponseMap) && !@map.survey? %>
   <% topic_id = SignedUpTeam.topic_id(@participant.parent_id, @participant.user_id) %>
-  <% response_check = false %>
-  <%= render :partial => 'submitted_content/main', :locals => {:participant => @contributor.participants.first, :stage => @assignment.get_current_stage(topic_id), :response_check => @response_check, :map_id => @map.id, :round => @round} %>
+  <% submission_check = false %>
+  <%= render :partial => 'submitted_content/main', :locals => {:participant => @contributor.participants.first, :stage => @assignment.get_current_stage(topic_id), :submission_check => @submission_check, :map_id => @map.id, :round => @round} %>
 <% end %>
 <% @review_versions = @map.get_all_versions() %>
 <% if !@review_versions.empty? %>
